--- a/index.html
+++ b/index.html
@@ -50,21 +50,30 @@
               >
             </li>
           </ul>
+          <svg width="40px" height="40px" class="icon-menu">
+            <use href="./images/symbol-defs.svg#icon-menu"></use>
+          </svg>
         </div>
       </header>
       <!-- Main section -->
-      <main class="main-section">
-        <!-- Hero -->
-        <section class="hero-section">
-          <div>
-            <h1 class="hero-section__title">
-              EFFECTIVE SOLUTIONS FOR YOUR BUSINESS
-            </h1>
-            <button class="hero-section__button" type="button" data-modal-open>
-              Request our service
-            </button>
-          </div>
-        </section>
+      <main>
+        <div class="main-section">
+          <!-- Hero -->
+          <section class="hero-section">
+            <div>
+              <h1 class="hero-section__title">
+                EFFECTIVE SOLUTIONS FOR YOUR BUSINESS
+              </h1>
+              <button
+                class="hero-section__button"
+                type="button"
+                data-modal-open
+              >
+                Request our service
+              </button>
+            </div>
+          </section>
+        </div>
         <!-- Details section -->
         <section>
           <div class="detail-section">
