--- a/index.html
+++ b/index.html
@@ -12,62 +12,58 @@
     />
   </head>
   <body>
-    <div>
+    <div class="test">
       <!-- Header -->
       <header class="style">
         <div class="container header-text header">
           <a href="index.html" class="header-logo"
             ><span class="web">Web</span>Studio</a
           >
-          <nav>
-            <ul class="header-text links">
-              <li>
+
+          <nav class="header-text__nav js-menu-container">
+            <ul class="header-text__menu links">
+              <li class="header-text__menu-item">
                 <a href="index.html" class="active">Studio</a>
               </li>
-              <li><a href="portfolio.html">Portfolio</a></li>
-              <li><a href="contacts.html">Contacts</a></li>
+              <li class="header-text__menu-item">
+                <a href="portfolio.html">Portfolio</a>
+              </li>
+              <li class="header-text__menu-item">
+                <a href="contacts.html">Contacts</a>
+              </li>
             </ul>
           </nav>
-          <div class="menu-container js-menu-container" id="mobile-menu">
-            <ul class="header-address">
-              <li>
-                <a class="header-contacts" href="mailto:info@devstudio.com"
-                  ><svg height="16px" width="16px">
-                    <use
-                      href="./images/symbol-defs.svg#icon-envelope-hover"
-                    ></use>
-                  </svg>
-                  info@devstudio.com</a
-                >
-              </li>
-              <li>
-                <a
-                  class="header-contacts"
-                  href="tel:+12127724150"
-                  class="phone-header"
-                  ><svg height="16px" width="16px">
-                    <use href="./images/symbol-defs.svg#icon-Vector"></use></svg
-                  >+1 212-772-4150</a
-                >
-              </li>
-            </ul>
-            <button
-              class="menu-toggle js-open-menu icon-menu"
-              aria-expanded="false"
-              aria-controls="mobile-menu"
-            >
-              <svg width="40px" height="40px">
-                <use href="./images/symbol-defs.svg#icon-menu"></use>
-              </svg>
-            </button>
-            <ul class="header-text links">
-              <li>
-                <a href="index.html" class="active">Studio</a>
-              </li>
-              <li><a href="portfolio.html">Portfolio</a></li>
-              <li><a href="contacts.html">Contacts</a></li>
-            </ul>
-          </div>
+          <ul class="header-address">
+            <li>
+              <a class="header-contacts" href="mailto:info@devstudio.com"
+                ><svg height="16px" width="16px">
+                  <use
+                    href="./images/symbol-defs.svg#icon-envelope-hover"
+                  ></use>
+                </svg>
+                info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a
+                class="header-contacts"
+                href="tel:+12127724150"
+                class="phone-header"
+                ><svg height="16px" width="16px">
+                  <use href="./images/symbol-defs.svg#icon-Vector"></use></svg
+                >+1 212-772-4150</a
+              >
+            </li>
+          </ul>
+          <button
+            class="menu-toggle js-open-menu toggle-button"
+            aria-expanded="false"
+            aria-controls="mobile-menu"
+          >
+            <svg width="40px" height="40px">
+              <use href="./images/symbol-defs.svg#icon-menu"></use>
+            </svg>
+          </button>
         </div>
       </header>
       <!-- Main section -->
@@ -443,6 +439,7 @@
         </div>
       </footer>
     </div>
+
     <!-- Modal -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
@@ -511,12 +508,15 @@
               </span>
             </label>
             <div class="modal--submit">
-              <button class="modal--submit__button" type="submit">Send</button>
+              <button class="button modal--submit__button" type="submit">
+                Send
+              </button>
             </div>
           </form>
         </div>
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js" type="text/javascript"></script>
   </body>
 </html>
