--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-    <div class="test">
+    <div>
       <!-- Header -->
       <header class="style">
         <div class="container header-text header">
@@ -21,6 +21,11 @@
           >
 
           <nav class="header-text__nav js-menu-container">
+            <button class="button-menu js-close-menu">
+              <svg width="15px" height="15px">
+                <use href="./images/symbol-defs.svg#icon-modal-vector"></use>
+              </svg>
+            </button>
             <ul class="header-text__menu links">
               <li class="header-text__menu-item">
                 <a href="index.html" class="active">Studio</a>
