--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           >
 
           <nav class="header-text__nav js-menu-container">
-            <button class="button-menu js-close-menu">
+            <button class="button-close-menu js-close-menu">
               <svg width="15px" height="15px">
                 <use href="./images/symbol-defs.svg#icon-modal-vector"></use>
               </svg>
@@ -37,29 +37,44 @@
                 <a href="contacts.html">Contacts</a>
               </li>
             </ul>
+
+            <ul class="header-address menu">
+              <li class="header-contacts">
+                <a
+                  class="header-contacts__mail"
+                  href="mailto:info@devstudio.com"
+                  ><svg height="16px" width="16px">
+                    <use
+                      href="./images/symbol-defs.svg#icon-envelope-hover"
+                    ></use>
+                  </svg>
+                  info@devstudio.com</a
+                >
+              </li>
+              <li class="header-contacts">
+                <a
+                  class="header-contacts__tel"
+                  href="tel:+12127724150"
+                  class="phone-header"
+                  ><svg height="16px" width="16px">
+                    <use href="./images/symbol-defs.svg#icon-Vector"></use></svg
+                  >+1 212-772-4150</a
+                >
+              </li>
+            </ul>
+            <ul class="header-social" hidden>
+              <li class="header-social__items">
+                <a href="#">Instagram<span>|</span></a>
+              </li>
+              <li class="header-social__items">
+                <a href="#">Twitter<span>|</span></a>
+              </li>
+              <li class="header-social__items">
+                <a href="#">Facebook<span>|</span></a>
+              </li>
+              <li class="header-social__items"><a href="#">LinkedIn</a></li>
+            </ul>
           </nav>
-          <ul class="header-address">
-            <li>
-              <a class="header-contacts" href="mailto:info@devstudio.com"
-                ><svg height="16px" width="16px">
-                  <use
-                    href="./images/symbol-defs.svg#icon-envelope-hover"
-                  ></use>
-                </svg>
-                info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a
-                class="header-contacts"
-                href="tel:+12127724150"
-                class="phone-header"
-                ><svg height="16px" width="16px">
-                  <use href="./images/symbol-defs.svg#icon-Vector"></use></svg
-                >+1 212-772-4150</a
-              >
-            </li>
-          </ul>
           <button
             class="menu-toggle js-open-menu toggle-button"
             aria-expanded="false"
