--- a/index.html
+++ b/index.html
@@ -20,60 +20,64 @@
             ><span class="web">Web</span>Studio</a
           >
 
-          <nav class="header-text__nav js-menu-container">
-            <button class="button-close-menu js-close-menu">
-              <svg width="15px" height="15px">
-                <use href="./images/symbol-defs.svg#icon-modal-vector"></use>
-              </svg>
-            </button>
-            <ul class="header-text__menu links">
-              <li class="header-text__menu-item">
-                <a href="index.html" class="active">Studio</a>
-              </li>
-              <li class="header-text__menu-item">
-                <a href="portfolio.html">Portfolio</a>
-              </li>
-              <li class="header-text__menu-item">
-                <a href="contacts.html">Contacts</a>
-              </li>
-            </ul>
+          <nav>
+            <div class="header-text__nav is-hidden js-menu-container">
+              <button class="button-close-menu js-close-menu">
+                <svg width="15px" height="15px">
+                  <use href="./images/symbol-defs.svg#icon-modal-vector"></use>
+                </svg>
+              </button>
+              <ul class="header-text__menu links">
+                <li class="header-text__menu-item">
+                  <a href="index.html" class="active">Studio</a>
+                </li>
+                <li class="header-text__menu-item">
+                  <a href="portfolio.html">Portfolio</a>
+                </li>
+                <li class="header-text__menu-item">
+                  <a href="contacts.html">Contacts</a>
+                </li>
+              </ul>
 
-            <ul class="header-address menu">
-              <li class="header-contacts">
-                <a
-                  class="header-contacts__mail"
-                  href="mailto:info@devstudio.com"
-                  ><svg height="16px" width="16px">
-                    <use
-                      href="./images/symbol-defs.svg#icon-envelope-hover"
-                    ></use>
-                  </svg>
-                  info@devstudio.com</a
-                >
-              </li>
-              <li class="header-contacts">
-                <a
-                  class="header-contacts__tel"
-                  href="tel:+12127724150"
-                  class="phone-header"
-                  ><svg height="16px" width="16px">
-                    <use href="./images/symbol-defs.svg#icon-Vector"></use></svg
-                  >+1 212-772-4150</a
-                >
-              </li>
-            </ul>
-            <ul class="header-social" hidden>
-              <li class="header-social__items">
-                <a href="#">Instagram<span>|</span></a>
-              </li>
-              <li class="header-social__items">
-                <a href="#">Twitter<span>|</span></a>
-              </li>
-              <li class="header-social__items">
-                <a href="#">Facebook<span>|</span></a>
-              </li>
-              <li class="header-social__items"><a href="#">LinkedIn</a></li>
-            </ul>
+              <ul class="header-address menu">
+                <li class="header-contacts">
+                  <a
+                    class="header-contacts__mail"
+                    href="mailto:info@devstudio.com"
+                    ><svg height="16px" width="16px">
+                      <use
+                        href="./images/symbol-defs.svg#icon-envelope-hover"
+                      ></use>
+                    </svg>
+                    info@devstudio.com</a
+                  >
+                </li>
+                <li class="header-contacts">
+                  <a
+                    class="header-contacts__tel"
+                    href="tel:+12127724150"
+                    class="phone-header"
+                    ><svg height="16px" width="16px">
+                      <use
+                        href="./images/symbol-defs.svg#icon-Vector"
+                      ></use></svg
+                    >+1 212-772-4150</a
+                  >
+                </li>
+              </ul>
+              <ul class="header-social" hidden>
+                <li class="header-social__items">
+                  <a href="#">Instagram<span>|</span></a>
+                </li>
+                <li class="header-social__items">
+                  <a href="#">Twitter<span>|</span></a>
+                </li>
+                <li class="header-social__items">
+                  <a href="#">Facebook<span>|</span></a>
+                </li>
+                <li class="header-social__items"><a href="#">LinkedIn</a></li>
+              </ul>
+            </div>
           </nav>
           <button
             class="menu-toggle js-open-menu toggle-button"
