--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <section>
           <div class="detail-section">
             <ul class="detail-section__container container">
-              <li>
+              <li class="detail-section__container--item">
                 <svg class="detail-section__icon">
                   <use href="./images/symbol-defs.svg#icon-antenna"></use>
                 </svg>
@@ -347,7 +347,7 @@
           </ul>
         </section>
         <!-- Regular Customers Section-->
-        <section class="container">
+        <section class="customer-container">
           <div class="customers-container">
             <h2 class="subtitle">Regular Customers</h2>
             <ul class="customers-list">
