--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
             <use href="./images/symbol-defs.svg#icon-modal-vector"></use>
           </svg>
         </button>
-        <div>
+        <div class="modal__container">
           <form>
             <legend class="modal__title">
               Leave your information and we'll call you back
