--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
             </button>
             <ul class="header-text__menu links">
               <li class="header-text__menu-item">
-                <a href="index.html" class="active">Studio</a>
+                <a href="index.html">Studio</a>
               </li>
               <li class="header-text__menu-item">
                 <a href="portfolio.html">Portfolio</a>
@@ -62,6 +62,7 @@
                 >
               </li>
             </ul>
+
             <ul class="header-social" hidden>
               <li class="header-social__items">
                 <a href="#">Instagram<span>|</span></a>
